# godot-openvr-overlay

./: .gitignore  CHARTER.md  CMakeLists.txt  README.md  SConstruct  build_profile.json  godot-openvr-overlay-demo.avif
.github/workflows/: ci.yml  make_build.yml
project/: actions.json  bindings_knuckles.json  controller_debug.gd  controller_debug.gd.uid  demo.gd  demo.gd.uid  demo.tscn  project.godot  spawn_thing.gd  spawn_thing.gd.uid
project/addons/godot-openvr-overlay/: EditorPlugin.gd  EditorPlugin.gd.uid  actions.json  bindings_index_controller.json  bindings_knuckles.json  godot-openvr-overlay.gdextension  godot-openvr-overlay.gdextension.uid  openvr_overlay_autoloader.gd  openvr_overlay_autoloader.gd.uid  plugin.cfg
src/: openvr_math.h  openvr_overlay.cpp  openvr_overlay.h  openvr_overlay_camera_3d.cpp  openvr_overlay_camera_3d.h  openvr_overlay_controller_3d.cpp  openvr_overlay_controller_3d.h  openvr_overlay_origin_3d.cpp  openvr_overlay_origin_3d.h  register_types.cpp  register_types.h  xr_interface_openvr_overlay.cpp  xr_interface_openvr_overlay.h
